[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msecifv2"
version = "0.1.0"
description = "Multi-Shell ECIF (msECIF) protein-ligand interaction fingerprints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "rdkit>=2023.9",
    "scipy>=1.17.1",
]

[tool.hatch.build.targets.wheel]
include = ["msecif_v2.py", "PDB_Atom_Keys_v2.csv"]
